crates/ink/tests/ui/selector_bytes/fail/invalid_parameter_type_01.rs
const _: u32 = ink::selector_bytes!(Abi::Ink, true);

fn main() {}
