crates/ink/tests/ui/selector_bytes/fail/invalid_parameter_type_01.stderr
error: expected string or byte string literal as second argument. found Lit::Bool { value: true }
 --> tests/ui/selector_bytes/fail/invalid_parameter_type_01.rs:1:47
  |
1 | const _: u32 = ink::selector_bytes!(Abi::Ink, true);
  |                                               ^^^^
